Bug-48513-High Contrast Mode Issue Fix - Done

--- a/css/main-1.css
+++ b/css/main-1.css
@@ -6484,5 +6484,9 @@ agendas-container agendas-item agendas-published {
         border: none !important;
     }
 
+    .news-green-bg .swiper-pagination-bullet-active, .news-pink-bg .swiper-pagination-bullet-active, .news-orange-bg .swiper-pagination-bullet-active, .news-yellow-bg .swiper-pagination-bullet-active, .news-gray-bg .swiper-pagination-bullet-active {
+        border: 8px solid white !important;
+    }
+
 }
 
